--- a/client/src/app.css
+++ b/client/src/app.css
@@ -2,7 +2,27 @@
     background: rgba(0, 0, 0, 0.7);
     border-radius: 0 0 10px 10px;
     margin-bottom: 10px;
-    padding-bottom: 50px;
+    /* padding-bottom: 50px; */
     margin-top: 0px;
     box-shadow: 0px 5px 20px 0px rgba(0,0,0,0.5);
+}
+.btn-green{
+    background-color:rgb(24, 163, 24);
+    color:white
+}
+.btn-red{
+    background-color:rgb(250, 88, 88);
+    color:black
+}
+.btn-black{
+    background-color:rgb(54, 53, 53);
+    color:rgb(182, 182, 182)
+}
+.btn-green:disabled{
+    background-color:rgb(10, 71, 10);
+    cursor: not-allowed;
+}
+.btn-red:disabled{
+    cursor: not-allowed;
+    background-color:rgb(129, 49, 49);
 }
