--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -1,4 +1,5 @@
 header{
+    position:relative;
     width: 100%;
     height: 16vh;
     min-height: 50px;
@@ -7,12 +8,9 @@ header{
     background-position-y: -190px;
     display: flex;
     justify-content: center;
-    /* align-items: center; */
-    /* flex-wrap: wrap; */
     padding: 0 30px;
     margin-bottom: 100px;
     box-shadow: 0 5px 5px rgba(37, 37, 37, 0.6);
-    z-index: 1;
 }
 
 header a {
@@ -25,13 +23,9 @@ header a {
     display: inline-block;
     margin: 10px 20px;
     opacity: 1;
-    position: relative;
-    top: 6vh;
-    left: 60vh;
-    margin-right: 5vh;
-    min-width: 250px;
-    min-height: 50px;
-    height: 50px;
+    position: absolute;
+    right: 10px;
+    top: 30px;
     text-decoration: none;
     list-style: none;
     z-index: 1;
@@ -49,7 +43,6 @@ header a {
     background: url("./logo_LTIV.png") no-repeat;
     background-size: cover;
     top: 5.5vh;
-    left: 20vh;
     position: relative;
     min-width: 152px;
     min-height: 152px;
@@ -145,29 +138,32 @@ header a {
     width: 100%;
     height: 11vh;
     display: flex;
-    /* flex-wrap: wrap; */
     transform: translateY(-14vh);
     color: white;
     font-size: 1.5rem;
     margin-right: 20px;
     z-index: 99;
+    padding: 0px 20px 0px 20px;
 }
 
 .menu__items {
     width: 100%;
     display: flex;
     flex-direction: row;
-    /* flex-wrap: wrap; */
+    justify-content:space-between;
+    padding-top: 25px;
 }
 
-.menu__items ul li {
+/* .menu__items ul li {
     justify-content: flex-start;
     float: left;
     margin: 20px 40px;
-}
+} */
 
 .menu{
-    width: 100%;
+    width: 465px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .menu.left li a,
@@ -181,7 +177,6 @@ header a {
 }
 
 .menu.right{
-    margin-left: 100px;
 }
 
 
