--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -2,7 +2,7 @@ header{
     position:relative;
     width: 100%;
     height: 16vh;
-    min-height: 50px;
+    min-height: 70px;
     background: url("./ltiv_dark.jpg") no-repeat;
     background-size: cover;
     background-position-y: -190px;
@@ -137,13 +137,14 @@ header a {
     background: #2c2c2c;
     width: 100%;
     height: 11vh;
+    min-height: 10vh;
     display: flex;
     transform: translateY(-14vh);
     color: white;
     font-size: 1.5rem;
     margin-right: 20px;
     z-index: 99;
-    padding: 0px 20px 0px 20px;
+    padding: 0px 50px;
 }
 
 .menu__items {
@@ -154,16 +155,15 @@ header a {
     padding-top: 25px;
 }
 
-/* .menu__items ul li {
-    justify-content: flex-start;
-    float: left;
-    margin: 20px 40px;
-} */
+.menu__items ul li a{
+display: flex;
+/* max-width: 20px; */
+}
 
 .menu{
     width: 465px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .menu.left li a,
@@ -176,9 +176,6 @@ header a {
     color: white;
 }
 
-.menu.right{
-}
-
 
 @keyframes underline{
     0%{
@@ -189,4 +186,58 @@ header a {
         width: 100%;
         right: 50%;
     }
+}
+
+@media screen and (max-width:1080px){
+    .menu__items {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        margin-right: 20px;
+        padding-top: 25px;
+    }
+
+    .menu.left {
+        max-width: 380px;
+        justify-content: space-evenly;
+    }
+
+    .menu.right{
+        margin-left: 200px;
+        justify-content: space-evenly;
+    }
+
+    header{
+        background-position-y: -150px;
+        } 
+
+    
+}
+
+@media screen and (max-height: 700px){
+    header{
+       margin-bottom: 90px;
+    } 
+    .menu__items{
+        margin-top: -10px;
+    }
+
+    .nav__menu {
+        min-height: 70px;
+    }
+    .round__logo{
+        min-width: 132px;
+        min-height: 132px;
+    }    
+}
+
+@media screen and (max-height:600px) {
+    header{
+        margin-bottom: 70px;
+     } 
+     .round__logo{
+        min-width: 122px;
+        min-height: 122px;
+        top: 20px;
+    }    
 }
