--- a/client/src/components/utils/notifications/notifications.css
+++ b/client/src/components/utils/notifications/notifications.css
@@ -7,7 +7,32 @@
     border-radius: 10px 0 10px 0;
 }
 
+.errMsgElev {
+    position: absolute;
+    top: 159vh;
+    left: 65%;
+    background: rgb(214,10,10);
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    letter-spacing: 1.5px;
+    border-radius: 10px 0 10px 0;
+}
+
+
 .successMsg {
+    background: rgb(9,158,54);
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    letter-spacing: 1.5px;
+    border-radius:  0 10px 0 10px;
+}
+
+.successMsgElev {
+    position: absolute;
+    top: 159vh;
+    left: 73%;
     background: rgb(9,158,54);
     color: #fff;
     text-align: center;
