--- a/client/src/app.css
+++ b/client/src/app.css
@@ -5,6 +5,7 @@
     /* padding-bottom: 50px; */
     margin-top: 0px;
     box-shadow: 0px 5px 20px 0px rgba(0,0,0,0.5);
+    /* min-width: 720px; */
 }
 .btn-green{
     background-color:rgb(24, 163, 24);
